update questions and answers to faqs

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -42,25 +42,25 @@
     <string name="resetpass">¿Has olvidado la contraseña?</string>
     <string name="fgPass">RESETEAR CONTRASEÑA</string>
     <string name="question1">1. ¿Cómo funciona la aplicación?</string>
-    <string name="answer1">La aplicación tien una vista principal de la ubicación donde te encuentras y los planes más cercanos, puedes seleccionar cualquiera de ellos y se abre una nueva ventana con toda la información de ese plan: nombre, lugar, fecha, precio y un enlace a la web para poder inscribirse</string>
+    <string name="answer1">La aplicación tiene una vista principal con un mapa y la ubicación donde te encuentras. Se muestran todos los planes de la ciudad de Madrd, puedes seleccionar cualquiera de ellos y obtendrás toda la información de la actividad: nombre, lugar, fecha, horario y un enlace a la web para poder más información. También podrás seleccionar el plan como favorito y suscribirte a la actividad.</string>
     <string name="question2">2. ¿Cómo puedo encontrar actividades y eventos cerca de mi ubicación?</string>
-    <string name="answer2">Debes tener la ubicación de tu dispositivo móvil activada y podrás ver unos marcadores en forma de mano que señalan los lugares del mapa donde se sitúan los planes</string>
+    <string name="answer2">Debes tener la ubicación de tu dispositivo móvil activada y podrás ver unos marcadores en forma de mano que señalan los lugares del mapa donde se sitúan los planes.</string>
     <string name="question3">3. ¿Cómo puedo reservar plaza en un evento o actividad?</string>
-    <string name="answer3">Cuando encuentras el plan que quieres puedes clicar en el mapa y te lleva a una ventana que te proporciona toda la información y un enlace a la web donde se puede reservar la plaza o inscribirse en el plan</string>
+    <string name="answer3">Cuando encuentras el plan que quieres puedes clicar en el mapa y te lleva a una ventana que te proporciona toda la información y un enlace a la web donde se puede reservar la plaza o inscribirse en el plan.</string>
     <string name="question4">4. ¿Hay un límite de reservas por evento o actividad?</string>
-    <string name="answer4">De la gestión de las reservas se encarga la entidad que la realiza y a la que se puede acceder mediante el enlace de cada plan que se ofrece desde nuestra aplicación</string>
+    <string name="answer4">De la gestión de las reservas se encarga la entidad que la realiza y a la que se puede acceder mediante el enlace de cada plan que se ofrece desde nuestra aplicación.</string>
     <string name="question5">5. ¿Cómo puedo ver los planes que me gustan?</string>
-    <string name="answer5">Esta app tiene la posibilidad de guardar en favoritos (haz clic en el corazón de cada actividad) las actividades que más te gustan y puedes acceder a esa lista en el botón de favoritos en el menú inferior de la aplicación</string>
+    <string name="answer5">Esta app tiene la posibilidad de guardar en favoritos (haz clic en el corazón de cada actividad) las actividades que más te gustan y puedes acceder a esa lista en el botón de favoritos en el menú inferior de la aplicación.</string>
     <string name="question6">6. ¿Cómo puedo desapuntarme de un plan?</string>
-    <string name="answer6">Cada actividad está gestionada por una entidad diferente y es a esa entidad a quien hay que dirigirse para consultar las posibilidades de anular el plan o darse de baja de la actividad</string>
+    <string name="answer6">Cada actividad está gestionada por una entidad diferente y es a esa entidad a quien hay que dirigirse para consultar las posibilidades de anular el plan o darse de baja de la actividad.</string>
     <string name="question7">7. ¿Cómo puedo hacer una sugerencia o reportar un problema?</string>
-    <string name="answer7">En la aplicación existe un menú desplegable en la parte superior izquierda de la pantalla donde se muestra una opción de contactar con nosotros y podrá escribirnos siempre que tenga un problema o una sugerencia, le atenderemos a la mayor brevedad posible intentando dar solución a su problema o mejorar la aplicación con sus sugerencias </string>
+    <string name="answer7">En la aplicación, existe un menú desplegable en la parte superior izquierda de la pantalla, donde se muestra una opción de contactar con nosotros. Podrá escribirnos siempre que tenga un problema o una sugerencia; le atenderemos a la mayor brevedad posible, intentando dar solución a su problema o mejorar la aplicación con sus sugerencias. </string>
     <string name="question8">8. ¿Usar la aplicación tiene algún coste?</string>
-    <string name="answer8">El uso de la aplicación no tiene ningún coste. Tampoco existe ninguna versión premium ni pagos adicionales para tener acceso a alguna funcionalidad extra de la aplicación. Es 100% gratuita para todos los usuarios</string>
+    <string name="answer8">El uso de la aplicación no tiene ningún coste. Tampoco existe ninguna versión premium ni pagos adicionales para tener acceso a alguna funcionalidad extra de la aplicación. Es 100% gratuita para todos los usuarios.</string>
     <string name="question9">9. ¿La aplicación está disponible en mi ciudad/país?</string>
     <string name="answer9">Actualmente la aplicación solo está disponible para la ciudad de Madrid, aunque en un futuro no muy lejano tenemos previsto estar presente en más ciudades y países. Si quieres que esté en tu región, ¡no dudes en contactar con nosotros para hacernos llegar tu petición!</string>
     <string name="question10">10. ¿Puedo contactar con las personas que están apuntadas a la actividad?</string>
-    <string name="answer10">En las primeras versiones de la app el chat todavía no está disponible, a la mayor brevedad posible tendrá a su disposición un chat para poder contactar con todas las personas que están apuntadas en la actividad y quieran tener conversaciones con los asistentes a la actividad o evento</string>
+    <string name="answer10">¡Por supuesto! En el menú principal, hay una sección para los chats donde se muestran todos los chats iniciados y un espacio donde puedes introducir el correo electrónico de una persona: si está dada de alta, puedes iniciar una conversación con ella. Si te has suscrito a un plan, también puedes consultar las personas apuntadas e iniciar el chat desde esa pantalla.</string>
     <string name="contactus">Contáctanos</string>
     <string name="suggestion">Sugerencia o Incidencia</string>
     <string name="send">ENVIAR</string>
