--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,25 +41,25 @@
     <string name="faqs">FAQs</string>
     <string name="createplan">New plan</string>
     <string name="question1">1. How does the app work?</string>
-    <string name="answer1">The application has a main view of the location where you are and the closest plans, you can select any of them and a new window opens with all the information of that plan: name, place, date, price and a link to the web to be able to register</string>
+    <string name="answer1">The application has a main view with a map and your current location. All the plans in the city of Madrid are displayed, and you can select any of them to get all the information about the activity: name, location, date, schedule, and a link to the website for more information. You can also mark the plan as a favorite and subscribe to the activity.</string>
     <string name="question2">2. How can I find activities and events near my location?</string>
-    <string name="answer2">You must have the location of your mobile device activated and you will see some hand-shaped markers that indicate the places on the map where the plans are located</string>
+    <string name="answer2">You must have the location of your mobile device activated and you will see some hand-shaped markers that indicate the places on the map where the plans are located.</string>
     <string name="question3">3. How can I reserve a place in an event or activity?</string>
     <string name="answer3">When you find the plan you want, you can click on the map and it will take you to a window that provides you with all the information and a link to the website where you can reserve a place or sign up for the plan.</string>
     <string name="question4">4. Is there a reservation limit per event or activity?</string>
     <string name="answer4">The entity that makes them is in charge of managing the reservations and which can be accessed through the link of each plan that is offered from our application.</string>
     <string name="question5">5. How can I see the plans I like?</string>
-    <string name="answer5">This app has the possibility of saving in favorites (click on the heart of each activity) the activities that you like the most and you can access that list in the favorites button in the lower menu of the application</string>
+    <string name="answer5">This app has the possibility of saving in favorites (click on the heart of each activity) the activities that you like the most and you can access that list in the favorites button in the lower menu of the application.</string>
     <string name="question6">6. How can I unroll from a plan?</string>
-    <string name="answer6">Each activity is managed by a different entity and it is that entity that should be contacted to consult the possibilities of canceling the plan or unsubscribing from the activity</string>
+    <string name="answer6">Each activity is managed by a different entity and it is that entity that should be contacted to consult the possibilities of canceling the plan or unsubscribing from the activity.</string>
     <string name="question7">7. How can I make a suggestion or report a problem?</string>
-    <string name="answer7">In the application there is a drop-down menu in the upper left part of the screen where an option to activity us is shown and you can write to us whenever you have a problem or a suggestion, we will attend to you as soon as possible trying to solve your problem or improve the app with your suggestions</string>
+    <string name="answer7">In the application, there is a dropdown menu in the top left corner of the screen, where an option to contact us is displayed. You can write to us anytime you have a problem or a suggestion; we will assist you as soon as possible, aiming to solve your issue or improve the application based on your suggestions.</string>
     <string name="question8">8. Does using the application have any cost?</string>
-    <string name="answer8">The use of the application is free of charge. There is also no premium version or additional payments to have access to some extra functionality of the application. It is 100% free for all users</string>
+    <string name="answer8">The use of the application is free of charge. There is also no premium version or additional payments to have access to some extra functionality of the application. It is 100% free for all users.</string>
     <string name="question9">9. Is the application available in my city/country?</string>
     <string name="answer9">Currently the application is only available for the city of Madrid, although in the not too distant future we plan to be present in more cities and countries. If you want it to be in your region, do not hesitate to activity us to send us your request!</string>
     <string name="question10">10. Can I activity the people who are signed up for the activity?</string>
-    <string name="answer10">In the first versions of the app the chat is not yet available, as soon as possible you will have a chat available to activity all the people who are signed up for the activity and want to have conversations with the attendees of the activity or event</string>
+    <string name="answer10">Of course! In the main menu, there is a section for chats where all the initiated chats are displayed, and a space where you can enter a person\'s email address: if they are registered, you can start a conversation. If you have subscribed to a plan, you can also check the enrolled individuals and initiate the chat from that screen.</string>
     <string name="contactus">Contact us</string>
     <string name="suggestion">Suggestion or Incidence</string>
     <string name="send">SEND</string>
